--- a/components/header.html
+++ b/components/header.html
@@ -12,7 +12,9 @@
       <a href="links.html">Links</a>
     </nav>
 
-    <button id="menu-toggle" class="header-menu-btn">☰</button>
+    <div class="header-menu-btn">
+  		<i class="fa-solid fa-bars"></i>
+		</div>
   </div>
 
   <!-- 中央：横長ロゴ（indexへのリンク） -->
@@ -26,6 +28,8 @@
 
   <!-- 右：検索（一覧ページだけ表示） -->
   <div class="header-right">
-    <button id="search-open" class="header-search-btn">検索</button>
+		<div id="search-open" class="header-search-btn">
+  		<i class="fa-solid fa-magnifying-glass"></i>
+		</div>
   </div>
 </header>
